# MoFox-src-demo

./: CONTRIBUTING.md  README.md  requirements.txt  start.py  test_refactor_verification.py
docs/: README.md
docs/app/: README.md
docs/app/bot/: API_GUIDE.md  BOT_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md  LAUNCHER_GUIDE.md
docs/core/: README.md
docs/core/prompt/: API_REFERENCE.md  BEST_PRACTICES.md  COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md
docs/core/transport/: API_REFERENCE.md  BEST_PRACTICES.md  QUICK_REFERENCE.md  README.md
docs/kernel/concurrency/: QUICK_REFERENCE.md  TASK_MANAGER_QUICK_REFERENCE.md  TASK_MANAGER_REFACTOR_SUMMARY.md  TEST_REPORT.md  task_manager.md
docs/kernel/config/: API_REFERENCE.md  BEST_PRACTICES.md  QUICK_REFERENCE.md  README.md
docs/kernel/db/: API_REFERENCE.md  CACHE_GUIDE.md  COMPLETION_SUMMARY.md  DATABASE_GUIDE.md  INDEX.md  OPTIMIZATION_GUIDE.md  QUICK_REFERENCE.md  README.md
docs/kernel/llm/: API_REFERENCE.md  BEST_PRACTICES.md  INKFOX_INTEGRATION.md  QUICK_REFERENCE.md  README.md
examples/: database_monitor_demo.py  kernel_api_demo.py  performance_monitor_demo.py  task_monitor_demo.py  unified_monitor_demo.py  vector_db_logging_demo.py  video_keyframe_demo.py
src/kernel/storage/: CMakeLists.txt  README.md  STRUCTURE.md  __init__.py  cpp_adapter.py  example.cpp  example.py  json_store.cpp  json_store.h  json_store.py
src/kernel/storage/docs/: TEST_GUIDE.md
src/kernel/storage/tests/: demo.ps1  demo_verify.ps1  run_demo.ps1  test.cpp  test.ps1  test.sh
tests/: test_refactor_verification.py
tests/kernel/: conftest.py
(+136 files in other folders)
